flutter_app/lib/bindings/em_bridge.dart


  late final _emDestroy =
      _lib.lookupFunction<_EmDestroyNative, _EmDestroyDart>('em_destroy');
  late final _emStartAudio =
      _lib.lookupFunction<_EmBoolNative, _EmBoolDart>('em_start_audio');
  late final _emStopAudio =
      _lib.lookupFunction<_EmVoidNative, _EmVoidDart>('em_stop_audio');
  late final _emStartMidi =
      _lib.lookupFunction<_EmBoolNative, _EmBoolDart>('em_start_midi');
  late final _emStopMidi =
      _lib.lookupFunction<_EmVoidNative, _EmVoidDart>('em_stop_midi');
  late final _emTransportPlay =
      _lib.lookupFunction<_EmVoidNative, _EmVoidDart>('em_transport_play');
  late final _emTransportStop =
      _lib.lookupFunction<_EmVoidNative, _EmVoidDart>('em_transport_stop');
  late final _emTransportIsPlaying =
      _lib.lookupFunction<_EmBoolNative, _EmBoolDart>('em_transport_is_playing');
  late final _emTransportSetTempo =
      _lib.lookupFunction<_EmSetTempoNative, _EmSetTempoDart>('em_transport_set_tempo');
  late final _emTransportGetTempo =
      _lib.lookupFunction<_EmGetTempoNative, _EmGetTempoDart>('em_transport_get_tempo');
  late final _emPollBeatInfo =
      _lib.lookupFunction<_EmPollBeatInfoNative, _EmPollBeatInfoDart>('em_poll_beat_info');
  late final _emDrumPresetCount =
      _lib.lookupFunction<_EmDrumPresetCountNative, _EmDrumPresetCountDart>('em_drum_preset_count');
  late final _emDrumSetPreset =
      _lib.lookupFunction<_EmDrumSetPresetNative, _EmDrumSetPresetDart>('em_drum_set_preset');
  late final _emDrumGetPreset =
      _lib.lookupFunction<_EmDrumGetPresetNative, _EmDrumGetPresetDart>('em_drum_get_preset');
  late final _emDrumGetPresetName =
      _lib.lookupFunction<_EmDrumGetPresetNameNative, _EmDrumGetPresetNameDart>('em_drum_get_preset_name');
  late final _emDrumToggleStep =
      _lib.lookupFunction<_EmDrumToggleStepNative, _EmDrumToggleStepDart>('em_drum_toggle_step');
  late final _emDrumClearPattern =
      _lib.lookupFunction<_EmVoidNative, _EmVoidDart>('em_drum_clear_pattern');
  late final _emDrumGetGrid =
      _lib.lookupFunction<_EmDrumGetGridNative, _EmDrumGetGridDart>('em_drum_get_grid');
  late final _emMidiPlayerLoad =
      _lib.lookupFunction<_EmMidiPlayerLoadNative, _EmMidiPlayerLoadDart>('em_midi_player_load');
  late final _emMidiPlayerRewind =
      _lib.lookupFunction<_EmVoidNative, _EmVoidDart>('em_midi_player_rewind');
  late final _emMidiPlayerProgress =
      _lib.lookupFunction<_EmMidiPlayerProgressNative, _EmMidiPlayerProgressDart>('em_midi_player_progress');
  late final _emMidiPlayerIsLoaded =
      _lib.lookupFunction<_EmBoolNative, _EmBoolDart>('em_midi_player_is_loaded');
  late final _emMidiPlayerSeek =
      _lib.lookupFunction<_EmMidiPlayerSeekNative, _EmMidiPlayerSeekDart>('em_midi_player_seek');
  late final _emVoiceLayerCount =
      _lib.lookupFunction<_EmVoiceLayerCountNative, _EmVoiceLayerCountDart>('em_voice_layer_count');
  late final _emVoiceAddLayer =
      _lib.lookupFunction<_EmVoiceAddLayerNative, _EmVoiceAddLayerDart>('em_voice_add_layer');
  late final _emVoiceRemoveLayer =
      _lib.lookupFunction<_EmVoiceRemoveLayerNative, _EmVoiceRemoveLayerDart>('em_voice_remove_layer');
  late final _emVoiceSetProgram =
      _lib.lookupFunction<_EmVoiceSetProgramNative, _EmVoiceSetProgramDart>('em_voice_set_program');
  late final _emVoiceGetProgram =
      _lib.lookupFunction<_EmVoiceGetProgramNative, _EmVoiceGetProgramDart>('em_voice_get_program');
  late final _emVoiceAllNotesOff =
      _lib.lookupFunction<_EmVoiceLayerCountNative, _EmVoiceLayerCountDart>('em_voice_all_notes_off');
  late final _emVoiceGetLayerName =
      _lib.lookupFunction<_EmVoiceGetLayerNameNative, _EmVoiceGetLayerNameDart>('em_voice_get_layer_name');
  late final _emVoiceNoteOn =
      _lib.lookupFunction<_EmVoiceNoteOnNative, _EmVoiceNoteOnDart>('em_voice_note_on');
  late final _emVoiceNoteOff =
      _lib.lookupFunction<_EmVoiceNoteOffNative, _EmVoiceNoteOffDart>('em_voice_note_off');
  late final _emMidiPortCount =
      _lib.lookupFunction<_EmMidiPortCountNative, _EmMidiPortCountDart>('em_midi_port_count');
  late final _emMidiPortName =
      _lib.lookupFunction<_EmMidiPortNameNative, _EmMidiPortNameDart>('em_midi_port_name');
  late final _emMidiPortOpen =
      _lib.lookupFunction<_EmMidiPortOpenNative, _EmMidiPortOpenDart>('em_midi_port_open');
  late final _emMidiPortIsOpen =
      _lib.lookupFunction<_EmBoolNative, _EmBoolDart>('em_midi_port_is_open');
  
  // ── MIDI output functions ──────────────────────────────────────────────────
  late final _emMidiOutputPortCount =
      _lib.lookupFunction<_EmMidiOutputPortCountNative, _EmMidiOutputPortCountDart>('em_midi_output_port_count');
  late final _emMidiOutputPortName =
      _lib.lookupFunction<_EmMidiOutputPortNameNative, _EmMidiOutputPortNameDart>('em_midi_output_port_name');
  late final _emMidiOutputOpen =
      _lib.lookupFunction<_EmMidiOutputOpenNative, _EmMidiOutputOpenDart>('em_midi_output_open');
  late final _emMidiOutputSendNoteOn =
      _lib.lookupFunction<_EmMidiOutputSendNoteOnNative, _EmMidiOutputSendNoteOnDart>('em_midi_output_send_note_on');
  late final _emMidiOutputSendNoteOff =
      _lib.lookupFunction<_EmMidiOutputSendNoteOffNative, _EmMidiOutputSendNoteOffDart>('em_midi_output_send_note_off');
  late final _emMidiOutputSendCC =
      _lib.lookupFunction<_EmMidiOutputSendCCNative, _EmMidiOutputSendCCDart>('em_midi_output_send_cc');
  late final _emMidiOutputSendProgramChange =
      _lib.lookupFunction<_EmMidiOutputSendProgramChangeNative, _EmMidiOutputSendProgramChangeDart>('em_midi_output_send_program_change');
  late final _emMidiOutputSendBankProgram =
      _lib.lookupFunction<_EmMidiOutputSendBankProgramNative, _EmMidiOutputSendBankProgramDart>('em_midi_output_send_bank_program');

  // ── MIDI feedback functions ────────────────────────────────────────────────
  late final _emMidiGetLastProgramChange =
      _lib.lookupFunction<_EmMidiGetLastProgramChangeNative, _EmMidiGetLastProgramChangeDart>('em_midi_get_last_program_change');
  
  // ── SysEx support ──────────────────────────────────────────────────────────
  late final _emMidiOutputSendSysex =
      _lib.lookupFunction<_EmMidiOutputSendSysexNative, _EmMidiOutputSendSysexDart>('em_midi_output_send_sysex');

  late final _emMidiOutputIsOpen =
      _lib.lookupFunction<_EmMidiOutputIsOpenNative, _EmMidiOutputIsOpenDart>('em_midi_output_is_open');

  late final _emMidiOutputClose =
      _lib.lookupFunction<_EmMidiOutputCloseNative, _EmMidiOutputCloseDart>('em_midi_output_close');

  // ── Log ring buffer ────────────────────────────────────────────────────────
  late final _emLogPoll =
      _lib.lookupFunction<_EmLogPollNative, _EmLogPollDart>('em_log_poll');

  late final _emAudioIsRunning =
      _lib.lookupFunction<_EmBoolNative, _EmBoolDart>('em_audio_is_running');
  late final _emAudioLatencyMs =
      _lib.lookupFunction<_EmAudioLatencyNative, _EmAudioLatencyDart>('em_audio_latency_ms');

  // Sampler — float set/get (shared signature, looked up by name at call time
  // using the concrete typedefs so the FFI constraint is satisfied)
  _EmSamplerSetDart _samplerSetFn(String name) =>
      _lib.lookupFunction<_EmSamplerSetNative, _EmSamplerSetDart>(name);
  _EmSamplerGetDart _samplerGetFn(String name) =>
      _lib.lookupFunction<_EmSamplerGetNative, _EmSamplerGetDart>(name);
  _EmSamplerSetIntDart _samplerSetIntFn(String name) =>
      _lib.lookupFunction<_EmSamplerSetIntNative, _EmSamplerSetIntDart>(name);
  _EmSamplerGetIntDart _samplerGetIntFn(String name) =>
      _lib.lookupFunction<_EmSamplerGetIntNative, _EmSamplerGetIntDart>(name);

  void _samplerSet(String name, int slot, int layer, double value) {
    if (!hasEngine) return;
    _samplerSetFn(name)(_engine, slot, layer, value);
  }

  double _samplerGet(String name, int slot, int layer) {
    if (!hasEngine) return 0.0;
    return _samplerGetFn(name)(_engine, slot, layer);
  }

  void _samplerSetInt(String name, int slot, int layer, int value) {
    if (!hasEngine) return;
    _samplerSetIntFn(name)(_engine, slot, layer, value);
  }

  int _samplerGetInt(String name, int slot, int layer) {
    if (!hasEngine) return 0;
    return _samplerGetIntFn(name)(_engine, slot, layer);
  }

  // ── Lifecycle ──────────────────────────────────────────────────────────────

  bool startAudio() {
    if (!hasEngine) return false;
    return _emStartAudio(_engine);
  }

  void stopAudio() {
    if (!hasEngine) return;
    _emStopAudio(_engine);
  }

  bool startMidi() {
    if (!hasEngine) return false;
    return _emStartMidi(_engine);
  }

  void stopMidi() {
    if (!hasEngine) return;
    _emStopMidi(_engine);
  }

  void dispose() {
    if (!hasEngine) return;
    _emDestroy(_engine);
    _engine = ffi.nullptr;
  }

  // ── Transport ──────────────────────────────────────────────────────────────

  void transportPlay() {
    if (!hasEngine) return;
    _emTransportPlay(_engine);
  }

  void transportStop() {
    if (!hasEngine) return;
    _emTransportStop(_engine);
  }

  void transportSetTempo(double bpm) {
    if (!hasEngine) return;
    _emTransportSetTempo(_engine, bpm);
  }

  bool transportIsPlaying() {
    if (!hasEngine) return false;
    return _emTransportIsPlaying(_engine);
  }

  double transportGetTempo() {
    if (!hasEngine) return 120.0;
    return _emTransportGetTempo(_engine);
  }

  // ── Beat info ──────────────────────────────────────────────────────────────

  void pollBeatInfo(ffi.Pointer<EMBeatInfo> out) {
    if (!hasEngine) return;
    _emPollBeatInfo(_engine, out);
  }

  // ── Drum machine ───────────────────────────────────────────────────────────

  int drumPresetCount() {
    return _emDrumPresetCount();
  }

  void drumSetPreset(int index) {
    if (!hasEngine) return;
    _emDrumSetPreset(_engine, index);
  }

  int drumGetPreset() {
    if (!hasEngine) return 0;
    return _emDrumGetPreset(_engine);
  }

  String drumGetPresetName(int index) {
    final ptr = _emDrumGetPresetName(index);
    if (ptr == ffi.nullptr) return 'Unknown';
    return ptr.cast<Utf8>().toDartString();
  }

  void drumToggleStep(int row, int step) {
    if (!hasEngine) return;
    _emDrumToggleStep(_engine, row, step);
  }

  void drumClearPattern() {
    if (!hasEngine) return;
    _emDrumClearPattern(_engine);
  }

  void drumGetGrid(ffi.Pointer<EMDrumGrid> out) {
    if (!hasEngine) return;
    _emDrumGetGrid(_engine, out);
  }

  // ── MIDI file player ───────────────────────────────────────────────────────

  bool midiPlayerLoad(String path) {
    if (!hasEngine) return false;
    return using((arena) {
      final pathPtr = path.toNativeUtf8(allocator: arena).cast<ffi.Char>();
      return _emMidiPlayerLoad(_engine, pathPtr);
    });
  }

  void midiPlayerRewind() {
    if (!hasEngine) return;
    _emMidiPlayerRewind(_engine);
  }

  double midiPlayerProgress() {
    if (!hasEngine) return 0.0;
    return _emMidiPlayerProgress(_engine);
  }

  bool midiPlayerIsLoaded() {
    if (!hasEngine) return false;
    return _emMidiPlayerIsLoaded(_engine);
  }

  void midiPlayerSeek(double fraction) {
    if (!hasEngine) return;
    _emMidiPlayerSeek(_engine, fraction);
  }

  // ── Voice slots ────────────────────────────────────────────────────────────

  int voiceLayerCount(int slot) {
    if (!hasEngine) return 0;
    return _emVoiceLayerCount(_engine, slot);
  }

  bool voiceAddLayer(int slot) {
    if (!hasEngine) return false;
    return _emVoiceAddLayer(_engine, slot);
  }

  void voiceRemoveLayer(int slot, int layerIndex) {
    if (!hasEngine) return;
    _emVoiceRemoveLayer(_engine, slot, layerIndex);
  }

  void voiceSetProgram(int slot, int program) {
    if (!hasEngine) return;
    _emVoiceSetProgram(_engine, slot, program);
  }

  int voiceGetProgram(int slot) {
    if (!hasEngine) return 0;
    return _emVoiceGetProgram(_engine, slot);
  }

  void voiceAllNotesOff(int slot) {
    if (!hasEngine) return;
    _emVoiceAllNotesOff(_engine, slot);
  }
